# SchwingerModel

./: .gitignore  2D_U1_Ns16_Nt16_Meas1000.txt  CMakeLists.txt  DiracMatrix.cpp  README.md  bi_gcstab.cpp  conjugate_gradient_test.cpp  gmres.ipynb  mass_analysis.ipynb  matrices.sh  readBinConf.cpp  run.sh  toBinary.cpp
AMG/: AMG_python.ipynb  CMakeLists.txt  ResidualNorm.ipynb  TwoGrid_SchwingerModel.ipynb  callgrind.out.553639
AMG/include/: amg.h  bi_cgstab.h  config.h  config.h.in  conjugate_gradient.h  dirac_operator.h  fgmres.h  gauge_conf.h  gmres.h  jackknife.h  matrix_operations.h  operator_overloads.h  sap.h  tests.h  variables.h
AMG/src/: amg.cpp  bi_cgstab.cpp  conjugate_gradient.cpp  dirac_operator.cpp  fgmres.cpp  gauge_conf.cpp  gmres.cpp  jackknife.cpp  main.cpp  matrix_operations.cpp  sap.cpp  tests.cpp  variables.cpp
include/: config.h  conjugate_gradient.h  dirac_operator.h  gauge_conf.h  hmc.h  matrix_operations.h  mpi_setup.h  operator_overloads.h  statistics.h  variables.h
src/: conjugate_gradient.cpp  dirac_operator.cpp  gauge_conf.cpp  hmc.cpp  main.cpp  mainB.cpp  mainTest.cpp  maintest.cpp  mass.cpp  matrix_operations.cpp  variables.cpp
testCG/: CMakeLists.txt  run.sh
testCG/include/: conjugate_gradient.h  dirac_operator.h  gauge_conf.h  variables.h
testCG/src/: conjugate_gradient.cpp  dirac_operator.cpp  gauge_conf.cpp  main.cpp  variables.cpp
